--- a/src/components/login/Login.css
+++ b/src/components/login/Login.css
@@ -1,16 +1,41 @@
 #loginWrapper {
     display: flex;
-    flex-direction: row;
-    align-items: center;
+    flex-direction: column;
     background-color: #ffffff;
-    justify-content: center;
     height: 100vh;
+    width: 50vw;
+}
+
+#signUp {
+    justify-self: flex-start;
+    width: 50vw;
+    text-align: end;
+    margin-top: 140px;
+}
+
+#signUpLink {
+    padding-right: 120px;
+    font-size: 25px;
+    font-weight: 600;
 }
 
 #loginForm {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+#mainMessage {
+    font-size: 50px;
+    font-weight: 600;
+    margin: 0;
+    margin-top: 50px;
+}
+
+#secondMessage {
+    font-size: 30px;
+    font-weight: 600;
+    margin: 0;
 }
 
 .inputField {
@@ -30,7 +55,15 @@
     font-size: 30px;
     font-weight: 600;
     padding: 10px;
-    margin-top: 100px;
+    margin-top: 80px;
     width: 25vw;
     border-radius: 5px;
+}
+
+#forgotPassword {
+    width: 50vw;
+    text-align: center;
+    font-weight: 500;
+    color: #777b86;
+    margin-top: 30px;
 }
