--- a/src/components/signUp/SignUp.module.css
+++ b/src/components/signUp/SignUp.module.css
@@ -1,4 +1,4 @@
-#loginWrapper {
+#signUpWrapper {
     display: flex;
     flex-direction: column;
     background-color: #ffffff;
@@ -6,24 +6,23 @@
     width: 50vw;
 }
 
-#signUp {
+#login {
     justify-self: flex-start;
     width: 50vw;
     text-align: end;
     margin-top: 100px;
 }
 
-#signUpLink {
+#loginLink {
     padding-right: 120px;
     font-size: 25px;
     font-weight: 600;
 }
 
-#loginForm {
+#signUpForm {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 50px;
 }
 
 #mainMessage {
@@ -44,7 +43,7 @@
     font-size: 20px;
     font-weight: 500;
     padding: 20px;
-    margin-top: 50px;
+    margin-top: 40px;
     width: 25vw;
     border-radius: 5px;
     box-sizing: border-box;
@@ -70,15 +69,7 @@
     font-size: 30px;
     font-weight: 600;
     padding: 10px;
-    margin-top: 80px;
+    margin-top: 60px;
     width: 25vw;
     border-radius: 5px;
-}
-
-#forgotPassword {
-    width: 50vw;
-    text-align: center;
-    font-weight: 500;
-    color: #777b86;
-    margin-top: 30px;
 }
