--- a/src/components/signUp/SignUp.module.css
+++ b/src/components/signUp/SignUp.module.css
@@ -6,6 +6,34 @@
     width: 50vw;
 }
 
+#submittedForm {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-self: center;
+    margin-top: 15vh;
+    padding: 50px;
+}
+
+#mainSuccessMessage {
+    font-size: 35px;
+    font-weight: 500;
+    text-align: center;
+    margin: 0;
+}
+
+#secondSuccessMessage {
+    font-size: 22px;
+    text-align: center;
+    margin: 30px 0 0 0;
+}
+
+#email {
+    display: block;
+    font-weight: 500;
+    margin-top: 40px;
+}
+
 #login {
     justify-self: flex-start;
     width: 50vw;
@@ -43,7 +71,7 @@
     font-size: 20px;
     font-weight: 500;
     padding: 20px;
-    margin-top: 40px;
+    margin-top: 30px;
     width: 25vw;
     border-radius: 5px;
     box-sizing: border-box;
@@ -63,13 +91,19 @@
     cursor: pointer;
 }
 
-#submitBtn {
+.errorMessage {
+    color: red;
+    font-weight: 600;
+    margin: 5px 0 0 0;
+}
+
+.customBtn {
     background-color: #040605;
     color: #f0f0f0;
     font-size: 30px;
     font-weight: 600;
     padding: 10px;
-    margin-top: 60px;
+    margin-top: 40px;
     width: 25vw;
     border-radius: 5px;
 }
