Add forgot password component

--- a/src/components/forgotPassword/ForgotPassword.module.css
+++ b/src/components/forgotPassword/ForgotPassword.module.css
@@ -1,38 +1,9 @@
-#signUpWrapper {
+#forgotPasswordWrapper {
     display: flex;
     flex-direction: column;
     background-color: #ffffff;
     height: 100vh;
     width: 50vw;
-}
-
-#submittedForm {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-self: center;
-    margin-top: 15vh;
-    padding: 50px;
-}
-
-#mainSuccessMessage {
-    font-size: 35px;
-    font-weight: 600;
-    text-align: center;
-    margin: 0;
-}
-
-#secondSuccessMessage {
-    font-size: 22px;
-    font-weight: 500;
-    text-align: center;
-    margin: 30px 0 0 0;
-}
-
-#email {
-    display: block;
-    font-weight: 500;
-    margin-top: 40px;
 }
 
 #login {
@@ -48,23 +19,36 @@
     font-weight: 600;
 }
 
-#signUpForm {
+#forgotPassword {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+    margin-top: 15vh;
 }
 
 #mainMessage {
-    font-size: 50px;
+    font-size: 35px;
     font-weight: 600;
+    text-align: center;
     margin: 0;
-    margin-top: 20px;
 }
 
 #secondMessage {
-    font-size: 30px;
-    font-weight: 600;
-    margin: 0;
+    font-size: 22px;
+    font-weight: 500;
+    text-align: center;
+    margin: 30px 0 0 0;
+}
+
+#emailInput {
+    display: flex;
+    flex-direction: column;
+    margin-top: 30px;
+}
+
+.label {
+    font-weight: 500;
 }
 
 .inputField {
@@ -72,24 +56,10 @@
     font-size: 20px;
     font-weight: 500;
     padding: 20px;
-    margin-top: 30px;
+    margin-top: 10px;
     width: 25vw;
     border-radius: 5px;
     box-sizing: border-box;
-}
-
-#passwordField {
-    position: relative;
-}
-
-#icon {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    width: 30px;
-    height: 65px;
-    margin-right: 20px;
-    cursor: pointer;
 }
 
 .errorMessage {
