Update styles & add labels for input fields

--- a/src/components/login/Login.module.css
+++ b/src/components/login/Login.module.css
@@ -10,7 +10,7 @@
     justify-self: flex-start;
     width: 50vw;
     text-align: end;
-    margin-top: 100px;
+    margin-top: 60px;
 }
 
 #signUpLink {
@@ -23,20 +23,31 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 50px;
+    margin-top: 100px;
 }
 
 #mainMessage {
-    font-size: 50px;
+    font-size: 45px;
     font-weight: 600;
-    margin: 0;
-    margin-top: 50px;
+    margin: 30px 0 0 0;
+    text-align: center;
 }
 
 #secondMessage {
-    font-size: 30px;
-    font-weight: 600;
-    margin: 0;
+    font-size: 22px;
+    font-weight: 500;
+    margin: 10px 0 0 0;
+    text-align: center;
+}
+
+.inputWrapper {
+    display: flex;
+    flex-direction: column;
+    margin-top: 30px;
+}
+
+.label {
+    font-weight: 500;
 }
 
 .inputField {
@@ -44,7 +55,7 @@
     font-size: 20px;
     font-weight: 500;
     padding: 20px;
-    margin-top: 50px;
+    margin-top: 10px;
     width: 25vw;
     border-radius: 5px;
     box-sizing: border-box;
@@ -70,7 +81,7 @@
     font-size: 30px;
     font-weight: 600;
     padding: 10px;
-    margin-top: 80px;
+    margin-top: 60px;
     width: 25vw;
     border-radius: 5px;
 }
