--- a/src/components/forgotPassword/ForgotPassword.module.css
+++ b/src/components/forgotPassword/ForgotPassword.module.css
@@ -35,13 +35,13 @@
 }
 
 #secondMessage {
-    font-size: 22px;
+    font-size: 18px;
     font-weight: 500;
     text-align: center;
     margin: 30px 0 0 0;
 }
 
-#emailInput {
+.inputWrapper {
     display: flex;
     flex-direction: column;
     margin-top: 30px;
