--- a/src/components/resetPassword/ResetPassword.module.css
+++ b/src/components/resetPassword/ResetPassword.module.css
@@ -1,57 +1,48 @@
-#forgotPasswordWrapper {
+#resetPasswordWrapper {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-self: center;
     background-color: #ffffff;
     height: 100vh;
     width: 50vw;
 }
 
-#login {
-    justify-self: flex-start;
-    width: 50vw;
-    text-align: end;
-    margin-top: 100px;
-}
-
-#loginLink {
-    padding-right: 120px;
-    font-size: 25px;
-    font-weight: 600;
-}
-
-#forgotPassword {
+#resetPasswordSuccessfully {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    margin-top: 15vh;
+    justify-self: center;
+    margin-top: 30vh;
 }
 
-.mainMessage {
+.mainSuccessMessage {
     font-size: 35px;
     font-weight: 600;
     text-align: center;
     margin: 0;
 }
 
-.secondMessage {
-    font-size: 18px;
+.secondSuccessMessage {
+    font-size: 22px;
     font-weight: 500;
     text-align: center;
     margin: 30px 0 0 0;
 }
 
-#emailSent {
+#resetPasswordForm {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-self: center;
+    margin-top: 15vh;
+    padding: 50px;
 }
 
 .inputWrapper {
     display: flex;
     flex-direction: column;
-    margin-top: 30px;
+    margin-top: 15px;
 }
 
 .label {
@@ -69,6 +60,20 @@
     box-sizing: border-box;
 }
 
+#passwordField {
+    position: relative;
+}
+
+#icon {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 30px;
+    height: 65px;
+    margin-right: 20px;
+    cursor: pointer;
+}
+
 .errorMessage {
     color: red;
     font-weight: 600;
@@ -81,7 +86,7 @@
     font-size: 30px;
     font-weight: 600;
     padding: 10px;
-    margin-top: 40px;
+    margin-top: 50px;
     width: 25vw;
     border-radius: 5px;
 }
