--- a/src/components/emailVerification/EmailVerification.module.css
+++ b/src/components/emailVerification/EmailVerification.module.css
@@ -4,17 +4,7 @@
     align-items: center;
     justify-self: center;
     background-color: #ffffff;
-    height: 100vh;
+    height: 65vh;
     width: 50vw;
-}
-
-.message {
-    font-size: 22px;
-    font-weight: 500;
-    text-align: center;
-    margin: 30px 0 0 0;
-}
-
-.message:nth-of-type(1) {
-    margin-top: 35vh;
+    padding-top: 35vh;
 }
