--- a/src/index.css
+++ b/src/index.css
@@ -29,3 +29,15 @@ button:disabled {
 select:disabled {
     cursor: not-allowed;
 }
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Firefox */
+input[type='number'] {
+    -moz-appearance: textfield;
+}
