Fix styles & add modal for creating record

--- a/src/index.css
+++ b/src/index.css
@@ -41,3 +41,7 @@ input::-webkit-inner-spin-button {
 input[type='number'] {
     -moz-appearance: textfield;
 }
+
+fieldset {
+    border: 0 none;
+}
