--- a/src/index.css
+++ b/src/index.css
@@ -45,3 +45,7 @@ input[type='number'] {
 fieldset {
     border: 0 none;
 }
+
+input[type='search']::-webkit-search-cancel-button {
+    -webkit-appearance: none;
+}
