--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;500;600;700&display=swap'); */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap');
 
 * {
@@ -6,12 +5,17 @@
     padding: 0;
 }
 
+html,
 body {
     margin: 0;
-    /* font-family: 'Roboto Mono', monospace; */
     font-family: 'Poppins', monospace;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+}
+
+html,
+body {
+    height: 100%;
 }
 
 a {
@@ -30,7 +34,6 @@ select:disabled {
     cursor: not-allowed;
 }
 
-/* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
     -webkit-appearance: none;
