Add fetching filtered and paginated user's records

--- a/src/index.css
+++ b/src/index.css
@@ -11,11 +11,8 @@ body {
     font-family: 'Poppins', monospace;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-}
-
-html,
-body {
     height: 100%;
+    overflow: hidden;
 }
 
 a {
